fix margin spacing

--- a/public/stylesheets/demo.css
+++ b/public/stylesheets/demo.css
@@ -10,7 +10,9 @@
     font-style: normal;
 }
 
-
+.container{
+  margin: 0 0 0 0;
+}
 
 .sidebar-nav li a:hover,
 .sidebar-nav li a:focus,
